[tool.poetry]
name = "everything_sequence"
version = "0.1.0"
description = ""
authors = ["Christian Leichsenring <christian.leichsenring@semalytix.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
